2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/snmp_explorer.php: improved the code style.
	
	* include/functions_html.php, include/ajax/module.php: rewrote the
	code for to use the last autocomplete jquery UI.

2013-03-05  Mario Pulido <mario.pulido@artica.es>
        
        *include/help/en/help_view_services.php,
        include/help/es/help_view_services.php:Modified services help.
        
        *images/help/service3.png,images/help/service4.png
        images/help/service5.png, images/help/service6.png
        images/help/service7.png. images/help/service2.png: Add images to services help.


2013-03-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fix little
	bug of agents statistics

	* include/help/en/help_field_match_snmp.php
	include/help/en/help_snmp_alert_field1.php
	include/help/es/help_field_match_snmp.php
	include/help/es/help_snmp_alert_field1.php
	pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	godmode/alerts/configure_alert_action.php
	godmode/alerts/alert_commands.php
	godmode/snmpconsole/snmp_alert.php: Adapt snmp alert
	editor to new alerts macro system. Now there are 10 fields
	and are dinamically charged from javascript. Bug 3605775

2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/gis_maps/render_view.php,
	operation/agentes/gis_view.php,
	godmode/gis_maps/configure_gis_map.php,
	godmode/agentes/agent_conf_gis.php, include/functions_gis.php: fixes
	about agents with white spaces.

	MERGED FROM THE BRANCH pandora_4

2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_netflow.php, include/functions_graph.php,
	include/functions_config.php, include/functions_groups.php: improved
	source code style.

2013-03-05 Miguel de Dios <miguel.dedios@artica.es>
	